manifests/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image1-app
  namespace: test-images-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image1-app
  template:
    metadata:
      labels:
        app: image1-app
    spec:
      containers:
        - name: integrations-app
          image: 476287654495.dkr.ecr.us-east-1.amazonaws.com/image1:latest
          ports:
            - containerPort: 3000
