manifests/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-images-app-ingress
  namespace: test-images-app
  labels:
    app: test-images-app
  annotations:
    kubernetes.io/ingress.class: alb
    Key: kubernetes.io/role/elb
    Value: "1"
    Key: kubernetes.io/role/internal-elb
    Value: "1"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    
spec:
  rules:
    - http:
        paths:
          - path: /image1
            pathType: Prefix
            backend:
              service:
                name: image1-service
                port:
                  number: 80

          - path: /image2
            pathType: Prefix
            backend:
              service:
                name: /image1-service
                port:
                  number: 80
